# leetcode-c

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .mega-linter.yml  .renovaterc.json  Dockerfile  LICENSE  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: fmt-clang-format.yml  lint-c.yml  lint-markdown.yml  lint-megalinter.yml  test-c.yml
.gitlab/: release.json
.gitlab/workflows/: docker-image.yml  mr.yml
.woodpecker/: check-clang-format.yml  check-clang-tidy.yml  check-cpplint.yml  check-grype.yml  check-hadolint.yml  check-meson-compile.yml  check-meson-format.yml  check-meson-test.yml  test.yml
src/0001/: meson.build  solution.c  solution.h
src/0001/tests/: 01.c
src/0002/: solution.c  solution.h
src/lib/: meson.build
src/lib/array_equal/: lib.c  lib.h
src/lib/sizeof_array/: lib.h
src/problems/0001/: meson.build  solution.h
src/problems/0001/tests/: main.c
subprojects/: criterion.wrap  wrapdb.json
tests/: 0001.c
